# UDS_ASSISTANT

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  analyze_docx.py  config.yaml.example  demo.py  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
docs/: api_generate_doc.md
prompts/: extract_prompt.md  service_0x10_prompt.md  service_0x11_prompt.md  service_0x14_prompt.md  service_0x19_prompt.md  service_0x22_prompt.md  service_0x27_prompt.md  service_0x28_prompt.md  service_0x2E_prompt.md  service_0x31_prompt.md  service_0x3E_prompt.md  service_0x85_prompt.md
src/excel_framework/: reader.py  text_converter.py  value_normalizer.py
src/uds_agent/: api.py  excel_export.py  extract_prompt.py  extraction_validator.py  generate_pipeline.py  llm_client.py  pipeline.py  prompt_loader.py  response_parser.py  schemas.py  test_parser.py  test_schemas.py
support_data/: NRC_list.xlsx  UDS测试用例大纲2026.3.24.html  UDS诊断调查表字段解析规则.docx  汽车电子函数接口定义-20251226.docx
技术方案/: UDS 诊断测试用例自动生成智能体 — 技术方案.md  UDS 诊断测试用例自动生成智能体 — 硬编码技术方案.md  UDS 诊断测试用例自动生成智能体 — 需求文档.md
